# e-comm-app

./: README.md  alembic.ini  products.db  pyproject.toml  test_products.db
alembic/: env.py
alembic/versions/: 180006e4e7e5_create_users_table.py  800e89a7dc4a_create_products_table.py
src/e_comm_app/app/: auth.py  config.py  main.py
src/e_comm_app/app/models/: product_models.py  user_models.py
src/e_comm_app/app/orm/: e_comm_orm.py
src/e_comm_app/app/routers/: products_v1.py  users_v1.py
tests/: test_products.py
